# libImageing

./: CMakeLists.txt  ReadMe.md  main.c
libImaging/: CMakeLists.txt  Copy.c  ImPlatform.h  Imaging.h  ImagingUtils.h  Python.c  Python.h  Resample.c  ResampleSIMDHorizontalConv.c  ResampleSIMDHorizontalConv.h  ResampleSIMDVerticalConv.c  ResampleSIMDVerticalConv.h  pillow_simd.c
